# hand-gesture-based-game

./: .coverage  .gitignore  README.md  conftest.py  main.py  pyproject.toml  setup-mac.sh
.github/workflows/: test.yml
src/hand_gesture_game/: __init__.py  __main__.py
src/hand_gesture_game/core/: game.py  gesture_detector.py
src/hand_gesture_game/exceptions/: game_exceptions.py
src/hand_gesture_game/utils/: logging_config.py
tests/unit/core/: test_game.py  test_gesture_detector.py
